<?xml version="1.0" encoding="utf-8"?>



<ScrollView android:id="@+id/scrollView02"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true"
	android:layout_alignParentTop="true"
	xmlns:android="http://schemas.android.com/apk/res/android">
	    
    <LinearLayout
		android:id="@+id/linear" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:focusable="true"
		android:focusableInTouchMode="true">

		<LinearLayout 
				android:id="@+id/lin_progress_bar" 
		        android:layout_marginBottom="58dp"
		        android:layout_height="45dp" 
		        android:layout_width="200dp"
		        android:visibility="visible">
        	
        	<ProgressBar 
        		android:id="@+id/ProgressBar01"
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content">
           	</ProgressBar>
           	
        	<TextView android:id="@+id/TextView01" 
        		android:layout_height="fill_parent"
           		android:layout_width="fill_parent" 
           		android:gravity="center_vertical"
             	android:text="@string/loading"
            	android:layout_marginLeft="10dp"
            	android:textSize="20sp">
           	</TextView>
           	
           	
		</LinearLayout>

		    <TextView
	            android:id="@+id/result"
	            android:textSize="20sp"
	            android:gravity="center"
	            android:paddingTop="5dp"
	            android:paddingBottom="5dp"        
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:visibility="invisible"/>	
		   		  

			<LinearLayout 
			    android:id="@+id/LinearLayout03" 
			    android:layout_height="wrap_content" 
			    android:layout_width="fill_parent" >
	
	
				<Button
				android:id="@+id/copy"
				android:text="@string/copy"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:visibility="invisible"/>

				<Button
				android:id="@+id/share"
				android:text="@string/share"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:visibility="invisible"/>
			    		    
			</LinearLayout>
	
				<Button
				android:id="@+id/quit"
				android:text="@string/quit"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:visibility="invisible"/>

		 </LinearLayout> 
	    
</ScrollView>	